typo + variable renamed
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>